...
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Course Name"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/add_course_courseName"
            android:layout_width="match_parent" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Instructor"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/add_course_instructor"
            android:layout_width="match_parent" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Semester Taken"
...
        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Short Description (Comment Below!)"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/add_course_description"
            android:layout_width="match_parent" />

        <RatingBar

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
...

            <RadioButton
                android:text="Very Accessible"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_course_ezAccess" />

            <RadioButton
                android:text="Hardly Accessible"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/add_course_hardAccess"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...
            android:layout_weight="0.73" >

            <RadioButton
                android:text="Yes!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_course_grade_yes" />

            <RadioButton
                android:text="@string/No"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:id="@+id/add_course_grade_no"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_course_toughness_easy" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Mild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_course_toughness_mild" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Typical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_course_toughness_typical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Tough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_course_toughness_tough" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Unreasonable!"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_course_toughness_unreasonable" />
            </TableRow>

        </TableLayout>


        <Space
...
            android:layout_weight="0.73" >

            <RadioButton
                android:text="Yes!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_course_misc_yes" />

            <RadioButton
                android:text="@string/No"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:id="@+id/add_course_misc_no"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>


        <Space
...
            android:layout_weight="0.73" >

            <RadioButton
                android:text="Yes!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_course_book_yes" />

            <RadioButton
                android:text="@string/No"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:id="@+id/add_course_book_no"
                android:layout_width="wrap_content"
                android:layout_weight="0.73" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
...

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/courseComment"
                    android:layout_weight="0.15" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:text="submit review"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:id="@+id/course_submitBut" />

        <Button
            android:text="SUBMIT AND SHARE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_submit_and_share_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_course_submitText"
            android:gravity="center"
            android:layout_weight="0.73" />


    </LinearLayout>
</ScrollView>
...
